--- a/css/site.css
+++ b/css/site.css
@@ -11,6 +11,7 @@
 .header {
   background-image: url(../images/background02.jpg);
   background-size: cover;
+  height: 300px;
   text-align: center;
   border-bottom: 4px solid #fff;
 }
